Rewrite springboot, web3, database-notes in Hinglish; fix path traversal
Springboot notes rewritten comprehensively; web3 and database-notes
rewritten in simpler Hinglish style matching system-design-notes tone.
Also fixes a path traversal bypass (sibling-dir + double-decode) in the
content route that was pending from an earlier session.